--- a/gamesite/templates/flatpages/default.html
+++ b/gamesite/templates/flatpages/default.html
@@ -1,9 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+
+<!-- подгружаем стили css -->
+{% load static %}
+
+
 <head>
-<title>scxczxczxc{{ flatpage.title }}</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+    <!-- строка ввода адреса -->
+    <title>{% block title %} block title {% endblock title %}</title>
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet"/>
 </head>
+
+
 <body>
-{{ flatpage.content }}
+
+<!-- верхняя панель -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+    <div class="container">
+
+        <!-- название сайта -->
+        <a class="navbar-brand" href="#"> -= Game Site =-</a>
+
+
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+
+                <!-- кнопки -->
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/about/">About</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/contacts/">Contact</a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- Page content-->
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12 text-center">
+            {% block content %} {{ flatpage.content }} {% endblock content %}
+        </div>
+    </div>
+</div>
+
 </body>
+
 </html>
