--- a/gamesite/templates/flatpages/default.html
+++ b/gamesite/templates/flatpages/default.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <!-- подгружаем стили css -->
 {% load static %}
-
 
 <head>
     <meta charset="utf-8"/>
@@ -16,7 +14,6 @@
     <link href="{% static 'css/styles.css' %}" rel="stylesheet"/>
 </head>
 
-
 <body>
 
 <!-- верхняя панель -->
@@ -25,7 +22,6 @@
 
         <!-- название сайта -->
         <a class="navbar-brand" href="#"> -= Game Site =-</a>
-
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
@@ -45,7 +41,7 @@
     </div>
 </nav>
 
-<!-- Page content-->
+<!-- контент страницы -->
 <div class="container">
     <div class="row">
         <div class="col-lg-12 text-center">
