--- a/gamesite/templates/flatpages/default.html
+++ b/gamesite/templates/flatpages/default.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
 
-                <!-- кнопки -->
+                <!-- кнопки - ссылки на страницы -->
 
                 <li class="nav-item">
                     <a class="nav-link" href="/about/">About</a>
