--- a/gamesite/templates/flatpages/default.html
+++ b/gamesite/templates/flatpages/default.html
@@ -11,7 +11,7 @@
     <meta name="author" content=""/>
     <!-- строка ввода адреса -->
     <title>{% block title %} block title {% endblock title %}</title>
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet"/>
+    <link href="{% static 'styles.css' %}" rel="stylesheet"/>
 </head>
 
 <body>
