--- a/gamesite/templates/main.html
+++ b/gamesite/templates/main.html
@@ -4,4 +4,4 @@
 
 {% block title %} Все объявления {% endblock title %}
 
-{% block content %} {% endblock content %}
+{% block content %} Все объявления {% endblock content %}
