--- a/gamesite/templates/post_create.html
+++ b/gamesite/templates/post_create.html
@@ -4,4 +4,4 @@
 
 {% block title %} Создать объявление {% endblock title %}
 
-{% block content %} {% endblock content %}
+{% block content %} Создать объявление {% endblock content %}
