--- a/gamesite/templates/post_delete.html
+++ b/gamesite/templates/post_delete.html
@@ -4,4 +4,4 @@
 
 {% block title %} Удалить объявления {% endblock title %}
 
-{% block content %} {% endblock content %}
+{% block content %} Удалить объявлени {% endblock content %}
