--- a/gamesite/templates/post_detail.html
+++ b/gamesite/templates/post_detail.html
@@ -4,4 +4,4 @@
 
 {% block title %} Подробности объявления {% endblock title %}
 
-{% block content %} {% endblock content %}
+{% block content %} Подробности объявления {% endblock content %}
