--- a/gamesite/templates/post_edit.html
+++ b/gamesite/templates/post_edit.html
@@ -4,4 +4,4 @@
 
 {% block title %} Редактировать объявление {% endblock title %}
 
-{% block content %} {% endblock content %}
+{% block content %} Редактировать объявление {% endblock content %}
