--- a/gamesite/templates/user_registration.html
+++ b/gamesite/templates/user_registration.html
@@ -4,4 +4,4 @@
 
 {% block title %} Регистрация нового пользователя {% endblock title %}
 
-{% block content %} {% endblock content %}
+{% block content %} Регистрация нового пользователя {% endblock content %}
