--- a/gamesite/templates/user_response.html
+++ b/gamesite/templates/user_response.html
@@ -4,4 +4,4 @@
 
 {% block title %} Отклики пользователя {% endblock title %}
 
-{% block content %} {% endblock content %}
+{% block content %} Отклики пользователя {% endblock content %}
