--- a/gamesite/templates/post_create.html
+++ b/gamesite/templates/post_create.html
@@ -4,4 +4,15 @@
 
 {% block title %} Создать объявление {% endblock title %}
 
-{% block content %} Создать объявление {% endblock content %}
+
+{% block content %}
+
+Создать объявление
+<br>
+<form align="left" method="post">
+    {% csrf_token %}
+    {{ form.as_p }} <!-- Теперь нам нужна только готовая форма и кнопка -->
+    <input type="submit" value="Добавить объявление">
+</form>
+
+{% endblock content %}
