--- a/gamesite/templates/static/default.html
+++ b/gamesite/templates/static/default.html
@@ -45,6 +45,10 @@
                     <a class="nav-link" href="{% url 'profile' %}">Профиль</a>
                 </li>
 
+                <li class="nav-item">
+                    <a class="nav-link" href="http://127.0.0.1:8000/admin">Админ</a>
+                </li>
+
 
             </ul>
         </div>
