--- a/gamesite/templates/main.html
+++ b/gamesite/templates/main.html
@@ -12,7 +12,7 @@
 <br>
 <!-- При нажатии на имя нас теперь будет перекидывать на страницу самого товара -->
 <br>
-<h6>{{ post.title | truncatechars:250 }}</h6>
+<h6>{{ post.title }}</h6>
 <br>
 <hr>
 <hr>
