--- a/gamesite/templates/post_detail.html
+++ b/gamesite/templates/post_detail.html
@@ -12,6 +12,9 @@
 <br>
 -= {{ post.title }} =-
 <br>
+<hr>
+<br>
+{{ post.title }}, {{ post.cont|safe  }}, {{ post.cont_up|safe }}
 <br>
 <br>
 - объявление №{{ post.pk }}; автор: {{ post.user }}; категория: {{ post.category }}; дата создания: {{ post.dateCreation }} -
@@ -19,5 +22,9 @@
 <br>
 <a href="{% url 'edit' post.id %}"><u>Редактировать</u></a>
 <a href="{% url 'delete' post.id %}"><u>Удалить</u></a>
-
+<br>
+<br>
+<br>
+<br>
+<hr>
 {% endblock content %}
