--- a/gamesite/templates/post_edit.html
+++ b/gamesite/templates/post_edit.html
@@ -4,4 +4,25 @@
 
 {% block title %} Редактировать объявление {% endblock title %}
 
-{% block content %} Редактировать объявление {% endblock content %}
+
+
+{% block content %}
+<br>
+<hr>
+<br>
+Редактировать объявление
+<br>
+<br>
+
+<form align="left" method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Сохранить изменения">
+</form>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+{% endblock content %}
