--- a/gamesite/templates/post_edit.html
+++ b/gamesite/templates/post_edit.html
@@ -8,6 +8,17 @@
 
 {% block content %}
 <br>
+
+<hr>
+<br>
+{{ post.title }}, {{ post.cont|safe  }}, {{ post.cont_up|safe }}
+<br>
+<br>
+- объявление №{{ post.pk }}; автор: {{ post.user }}; категория: {{ post.category }}; дата создания: {{ post.dateCreation }} -
+<br>
+<br>
+
+
 <hr>
 <br>
 Редактировать объявление
