--- a/gamesite/templates/post_edit.html
+++ b/gamesite/templates/post_edit.html
@@ -4,7 +4,9 @@
 
 {% block title %} Редактировать объявление {% endblock title %}
 
-
+{% load static %}
+<script type="text/javascipt" scr="{% static 'ckeditor/ckeditor-init.js' %}"></script>
+<script type="text/javascipt" scr="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
 
 {% block content %}
 <br>
@@ -27,6 +29,7 @@
 
 <form align="left" method="POST">
     {% csrf_token %}
+    {{ form.media }}
     {{ form.as_p }}
     <input type="submit" value="Сохранить изменения">
 </form>
