--- a/gamesite/templates/post_edit.html
+++ b/gamesite/templates/post_edit.html
@@ -13,7 +13,7 @@
 
 <hr>
 <br>
-{{ post.title }}, {{ post.cont|safe  }}, {{ post.cont_up|safe }}
+{{ post.title }}, {{ post.content }}, {{ post.cont|safe  }}, {{ post.cont_up|safe }}
 <br>
 <br>
 - объявление №{{ post.pk }}; автор: {{ post.user }}; категория: {{ post.category }}; дата создания: {{ post.dateCreation }} -
