--- a/gamesite/templates/post_detail.html
+++ b/gamesite/templates/post_detail.html
@@ -14,7 +14,7 @@
 <br>
 <hr>
 <br>
-{{ post.title }}, {{ post.cont|safe  }}, {{ post.cont_up|safe }}
+{{ post.title }}, {{ post.content|safe  }}
 <br>
 <br>
 - объявление №{{ post.pk }}; автор: {{ post.user }}; категория: {{ post.category }}; дата создания: {{ post.dateCreation }} -
