--- a/gamesite/templates/main.html
+++ b/gamesite/templates/main.html
@@ -5,21 +5,17 @@
 {% block title %} Все объявления {% endblock title %}
 
 {% block content %}
-Все объявления
-
+<br>
+<h3>Все объявления</h3>
+<br>
+<br>
 {% for post in posts %}
+<h5><a href="{% url 'detail' post.id %}"><u>{{ post.title }}</u></a></h5>
 <br>
 <br>
-<!-- При нажатии на имя нас теперь будет перекидывать на страницу самого товара -->
-<br>
-<h6>{{ post.title }}, {{ post.content|safe  }}</h6>
-<h3><a href="{% url 'detail' post.id %}"><u>{{ post }}</u></a></h3>
-
+<h6>{{ post.content|safe  }}</h6>
 <br>
 <hr>
 <hr>
-
 {% endfor %}
-
-
 {% endblock content %}
