change post on note

--- a/gamesite/templates/note_create.html
+++ b/gamesite/templates/note_create.html
@@ -6,8 +6,8 @@
 
 
 {% block content %}
-
-Создать объявление
+<br>
+<h3>Создать объявление</h3>
 <br>
 <form align="left" method="post">
     {% csrf_token %}
