--- a/gamesite/templates/note_detail.html
+++ b/gamesite/templates/note_detail.html
@@ -2,12 +2,11 @@
 
 {% extends 'static/default.html' %}
 
-{% block title %} Подробности объявления - {{ post.title }} {% endblock title %}
+{% block title %} Подробности объявления - {{ note.title }} {% endblock title %}
 
 {% block content %}
 <br>
-<br>
-Подробности объявления
+<h3>Подробности объявления</h3>
 <br>
 <br>
 -= {{ note.title }} =-
