--- a/gamesite/templates/note_search.html
+++ b/gamesite/templates/note_search.html
@@ -4,4 +4,9 @@
 
 {% block title %} Поиск объявлений {% endblock title %}
 
-{% block content %} Поиск объявлений {% endblock content %}
+{% block content %}
+<br>
+<h3>Поиск объявлений</h3>
+<br>
+<br>
+{% endblock content %}
