--- a/gamesite/templates/note_detail.html
+++ b/gamesite/templates/note_detail.html
@@ -23,7 +23,33 @@
 <a href="{% url 'delete' note.id %}"><u>Удалить</u></a>
 <br>
 <br>
+
+<form method="POST">
+    {% csrf_token %}
+    будущая форма передачи текстового сообщения
+    {{ form.as_p }}
+    <input type="submit" value="Оставить отклик">
+</form>
+
+
+
+<button><a href="{% url 'add_response' note.id %}"><u>Оставить отклик</u></a></button>
+
 <br>
 <br>
 <hr>
 {% endblock content %}
+
+
+
+
+<hr>
+{% if is_not_subscribe %}
+<!--GET запрос, который передает в наше представление значение категории, переменная post.category.id, -->
+<!--которая в дальнейшем необходима для добавления подписчиков-->
+<button><a href="add_subscribe/?pk={{ post.category.id }}">Подписка</a></button>
+{% endif %}
+
+{% if is_subscribe %}
+<button><a href="del_subscribe/?pk={{ post.category.id }}">Отписка</a></button>
+{% endif %}
