--- a/gamesite/templates/note_detail.html
+++ b/gamesite/templates/note_detail.html
@@ -19,13 +19,21 @@
 
 <h6>Форма добавления отклика</h6><br>
 
-<form method="POST">
+
+
+
+<form action ="{% url '' }"  method="POST">
     {% csrf_token %}
     {{ form.content }}
+    <span>{{ error }}</span>
     <input type="submit" value="Оставить отклик">
 </form><br><br>
 
+
+
+
 <button><a href="{% url 'add_response' note.id %}"><u>Оставить отклик</u></a></button><br><br>
+<!--<button><a href="{% url 'add_response' note.id %}"><u>Оставить отклик</u></a></button><br><br>-->
 
 <hr>
 {% endblock content %}
