--- a/gamesite/templates/note_detail.html
+++ b/gamesite/templates/note_detail.html
@@ -23,7 +23,7 @@
 <form method="POST">
     {% csrf_token %}
     {{ form.content }}
-    {{ form.notenote }}
+    {{ form.note }}
     {{ form.user }}
     <input type="submit" value="Оставить отклик">
 </form><br><br>
