--- a/gamesite/templates/user_response.html
+++ b/gamesite/templates/user_response.html
@@ -4,4 +4,39 @@
 
 {% block title %} Отклики пользователя {% endblock title %}
 
-{% block content %} Отклики пользователя {% endblock content %}
+{% block content %}
+
+<br><h3>Отклики пользователя</h3><br><br>
+
+{% for response in responses %}
+{{ response.content }}<br>
+{{ response.user_id }}<br>
+{{ response.note_id }}<br>
+
+<hr>
+<hr>
+
+{% endfor %}
+
+<!--код для пагинации-->
+{% if is_paginated %}
+{% if page_obj.has_previous %}
+<a href="?page=1">First</a>
+<a href="?page={{ page_obj.previous_page_number }}"><<<</a>
+{% endif %}
+{% for num in page_obj.paginator.page_range %}
+{% if page_obj.number == num %}
+<a>{{ num }}</a>
+{% elif num > page_obj.number|add:'-5' and num < page_obj.number|add:'5' %}
+<a href="?page={{ num }}">{{ num }}</a>
+{% endif %}
+{% endfor %}
+{% if page_obj.has_next %}
+<a href="?page={{ page_obj.next_page_number }}">>>></a>
+<a href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+{% endif %}
+{% endif %}
+<br>
+<hr>
+
+{% endblock content %}
