--- a/gamesite/templates/static/default.html
+++ b/gamesite/templates/static/default.html
@@ -1,8 +1,11 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
 <!-- подгружаем стили css -->
 {% load static %}
+<!--{% load static %}-->
 
 <head>
     <meta charset="utf-8"/>
