--- a/gamesite/templates/user_response.html
+++ b/gamesite/templates/user_response.html
@@ -6,10 +6,11 @@
 
 {% block content %}
 
-<br><h3>Отклики на объявления {{ response.user_id.name }}</h3><br><br>
+<br><h3>Отклики на объявления </h3><br><br>
 
 {% for note in notes %}
 {{ note.title }}<br>
+{{ note.id }}<br>
 <!--{{ note.content | safe }}<br>-->
 {{ note.user }}<br>
 
