--- a/gamesite/templates/user_response.html
+++ b/gamesite/templates/user_response.html
@@ -8,22 +8,25 @@
 
 <br><h3>Отклики на объявления </h3><br><br>
 
-{% for response in responses %}
-отклики<br>
-content: {{ response.content }}<br>
-id: {{ response.id }}<br><br>
-{% endfor %}
-
-<hr>
-<hr>
-
+<br>
+Список объявлений данного пользователя
+<br><br>
 {% for note in notes %}
-объявления<br>
 {{ note.title }}<br>
 {{ note.id }}<br>
 <!--{{ note.content | safe }}<br>-->
-{{ note.user }}<br>
+{{ note.user }}<br><br>
+{% endfor %}
 
+
+<hr>
+<hr>
+отклики<br><br>
+
+{% for response in responses %}
+content: {{ response.content }}<br>
+id: {{ response.id }}<br><br>
+{% endfor %}
 
 <!--цикл for для каждого объявления выводит все отклики-->
 <!--в виде списка с именем пользователя и его контактов-->
@@ -34,7 +37,7 @@ id: {{ response.id }}<br><br>
 <hr>
 <hr>
 
-{% endfor %}
+
 
 <!--код для пагинации-->
 {% if is_paginated %}
