вернул обратно модели

--- a/gamesite/templates/note_detail.html
+++ b/gamesite/templates/note_detail.html
@@ -23,8 +23,8 @@
 <form method="POST">
     {% csrf_token %}
     {{ form.content }}
-    {{ form.note }}
-    {{ form.user }}
+<!--    {{ form.note }}-->
+<!--    {{ form.user }}-->
     <input type="submit" value="Оставить отклик">
 </form><br><br>
 
