--- a/gamesite/templates/user_response.html
+++ b/gamesite/templates/user_response.html
@@ -12,48 +12,62 @@
     <input type="submit" value="Найти">
 </form><br>
 
+<!--<hr>-->
+<!--<hr>-->
+<!--отклики<br><br>-->
+
+<!--{% for response in responses %}-->
+<!--content: {{ response.content }}<br>-->
+<!--id: {{ response.id }}<br>-->
+<!--note_id: {{ response.note_id }}<br><br>-->
+<!--{% endfor %}-->
+
+
 <hr>
 <hr>
-отклики<br><br>
 
-{% for response in responses %}
-content: {{ response.content }}<br>
-id: {{ response.id }}<br>
-note_id: {{ response.note_id }}<br><br>
-{% endfor %}
+<table cellspacing="5" cellpadding="10" border="1"
+       style=" border-spacing : 10px; border-color : blue; border-style: solid;" bgcolor="FFFFFF">
+    <tr>
+        <td width="300">
+            <h5>Объявление</h5>
+        </td>
 
+        <td width="100">
+            <h5>Пользователь</h5>
+        </td>
 
-<hr>
-<hr>
+        <td width="250">
+            <h5>Контакты</h5>
+        </td>
 
+        <td width="130">
+            <h5>Дата</h5>
+        </td>
 
-{% for response in filter.qs %}
-<tr>
+    </tr>
+    {% for response in filter.qs %}
+    <tr>
 
-    <td>
-        <p align="center">{{ response.note }}</p>
-    </td>
+        <td>
+            <p align="center">{{ response.note }}</p>
+        </td>
 
-    <td>
-        <p align="center">{{ response.user_author }}</p>
-    </td>
+        <td>
+            <p align="center">{{ response.user_response }}</p>
+        </td>
 
-    <td>
-        <p align="center">{{ response.user_response }}</p>
-    </td>
+        <td>
+            <p align="center">{{ response.content }}</p>
+        </td>
 
-    <td>
-        <p align="center">{{ response.content }}</p>
-    </td>
+        <td>
+            <p align="center">{{ response.datetime | date:"d M Y" }}</p>
+        </td>
 
-    <td>
-        <p align="center">{{ response.datetime | date:"d M Y" }}</p>
-    </td>
-
-</tr>
-
-
-{% endfor %}
+    </tr>
+    {% endfor %}
+</table>
 
 
 <!--код для пагинации-->
