--- a/gamesite/templates/user_response.html
+++ b/gamesite/templates/user_response.html
@@ -70,9 +70,9 @@
         </td>
 
         <td>
-            <a href="{% url 'detail' response.id %}"><u>принять</u></a>
+            <a href="{% url 'accept' response.id %}"><u>принять</u></a>
             /
-            <a href="{% url 'detail' response.id %}"><u>удалить</u></a>
+            <a href="{% url 'remove' response.id %}"><u>удалить</u></a>
         </td>
 
 
