--- a/gamesite/templates/user_response.html
+++ b/gamesite/templates/user_response.html
@@ -72,7 +72,7 @@
         <td>
             <a href="{% url 'accept' response.id %}"><u>принять</u></a>
             /
-            <a href="{% url 'remove' response.id %}"><u>удалить</u></a>
+            <a href="{% url 'remove' response.id %}"><u>отклонить</u></a>
         </td>
 
 
