--- a/gamesite/templates/note_detail.html
+++ b/gamesite/templates/note_detail.html
@@ -9,23 +9,28 @@
 <h3>Подробности объявления</h3><br>
 
 -= {{ note.title }} =-<br>
-<hr>
+- автор: {{ note.user }}; категория: {{ note.category }}; дата создания: {{ note.datetime }} -
+<br><hr>
+
 {{ note.content | safe }}<br><br>
 
-- объявление №{{ note.pk }}; автор: {{ note.user }}; категория: {{ note.category }}; дата создания: {{ note.dateCreation }} -<br><br>
 
-
+<!--кнопки редактирования / удаления объявления
+видимы в том случае, если пользователь является автором объявления-->
 {% if edit_delete %}
 <a href="{% url 'edit' note.id %}"><u>Редактировать</u></a>
-<a href="{% url 'delete' note.id %}"><u>Удалить</u></a><br><br><br>
+<a href="{% url 'delete' note.id %}"><u>Удалить</u></a><br><br>
 {% endif %}
 
 
+<!--сообщение, которое выводится после отправления отклика-->
 {% if message_response %}
-<h6>Ваш отклик отправлен успешно</h6><br>
+<h6>Ваш отклик успешно отправлен</h6><br>
 {% endif %}
 
 
+<!--поле для ввода отклика, видимо, когда пользователь не является автором
+данного объявления и ранее еще не отравлял отклик-->
 {% if pole_response %}
 <h6>Введите ваши контакты</h6><br>
 <form method="POST">
@@ -34,7 +39,6 @@
     <input type="submit" value="Оставить отклик">
 </form><br><br>
 {% endif %}
-
 
 
 <hr>
