--- a/gamesite/templates/static/default.html
+++ b/gamesite/templates/static/default.html
@@ -49,7 +49,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="http://127.0.0.1:8000/admin">Админ</a>
+                    <a class="nav-link" href="http://127.0.0.1:8000/admin">Админ ({{request.user.username}})</a>
                 </li>
 
 
