.до удаления лишнего поля фио

--- a/gamesite/templates/user_response.html
+++ b/gamesite/templates/user_response.html
@@ -47,7 +47,7 @@
         </td>
 
         <td>
-            <p align="center">{{ response.user_fio }}</p>
+            <p align="center">{{ response.user_response.first_name }} {{ response.user_response.last_name }}</p>
         </td>
 
         <td>
