--- a/gamesite/templates/user_response.html
+++ b/gamesite/templates/user_response.html
@@ -15,6 +15,9 @@
 <hr>
 <hr>
 
+<br><h3>Новые отклики</h3><br>
+
+
 <table cellspacing="5" cellpadding="10" border="1"
        style=" border-spacing : 10px; border-color : blue; border-style: solid;" bgcolor="FFFFFF">
     <tr>
@@ -64,12 +67,63 @@
             <a href="{% url 'remove' response.id %}"><u>отклонить</u></a>
         </td>
 
+    </tr>
+    {% endfor %}
+</table><br>
 
 
+<br><h3>Отклоненные отклики</h3><br>
+
+<table cellspacing="5" cellpadding="10" border="1"
+       style=" border-spacing : 10px; border-color : blue; border-style: solid;" bgcolor="FFFFFF">
+    <tr>
+        <td width="300">
+            <h5>Объявление</h5>
+        </td>
+
+        <td width="100">
+            <h5>Пользователь</h5>
+        </td>
+
+        <td width="250">
+            <h5>Контакты</h5>
+        </td>
+
+        <td width="150">
+            <h5>Дата отклика</h5>
+        </td>
+
+        <td width="250">
+            <h5>Статус</h5>
+        </td>
+
+    </tr>
+    {% for response in del_response %}
+    <tr>
+
+        <td>
+            <p align="center">{{ response.note }}</p>
+        </td>
+
+        <td>
+            <p align="center">{{ response.user_response.first_name }} {{ response.user_response.last_name }}</p>
+        </td>
+
+        <td>
+            <p align="center">{{ response.content }}</p>
+        </td>
+
+        <td>
+            <p align="center">{{ response.datetime | date:"d M Y" }}</p>
+        </td>
+
+        <td>
+            <p align="center">отклонен</p>
+        </td>
 
     </tr>
     {% endfor %}
-</table>
+</table><br>
 
 
 <!--код для пагинации-->
