--- a/gamesite/templates/user_response.html
+++ b/gamesite/templates/user_response.html
@@ -61,7 +61,7 @@
         <td><p align="center">{{ response.user_response.first_name }} {{ response.user_response.last_name }}</p></td>
         <td><p align="center">{{ response.content }}</p></td>
         <td><p align="center">{{ response.datetime | date:"d M Y" }}</p></td>
-        <td><p align="center">принят</p></td>
+        <td><p align="center">принят (<a href="{% url 'remove' response.id %}"><u>отклонить</u></a>)</p></td>
     </tr>
     {% endfor %}
 </table><br>
@@ -84,7 +84,7 @@
         <td><p align="center">{{ response.user_response.first_name }} {{ response.user_response.last_name }}</p></td>
         <td><p align="center">{{ response.content }}</p></td>
         <td><p align="center">{{ response.datetime | date:"d M Y" }}</p></td>
-        <td><p align="center">отклонен</p></td>
+        <td><p align="center">отклонен (<a href="{% url 'accept' response.id %}"><u>принять</u></a>)</p></td>
     </tr>
     {% endfor %}
 </table><br>
