--- a/gamesite/templates/static/default.html
+++ b/gamesite/templates/static/default.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,27 +29,12 @@
             <ul class="navbar-nav ml-auto">
 
                 <!-- кнопки - ссылки на страницы -->
-
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'create' %}">Создать</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'search' %}">Поиск</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'response' %}">Отклики</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'profile' %}">Профиль</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="http://127.0.0.1:8000/admin">АдминПанель ({{request.user.username}})</a>
-                </li>
-
+                <li class="nav-item"><a class="nav-link" href="{% url 'create' %}">Создать</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'search' %}">Поиск</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'response' %}">Отклики</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">Профиль</a></li>
+                <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8000/admin">АдминПанель
+                    ({{request.user.username}})</a></li>
 
             </ul>
         </div>
@@ -61,12 +44,9 @@
 <!-- контент страницы -->
 <div class="container">
     <div class="row">
-        <div class="col-lg-12 text-center">
-            {% block content %} {{ flatpage.content }} {% endblock content %}
-        </div>
+        <div class="col-lg-12 text-center">{% block content %} {{ flatpage.content }} {% endblock content %}</div>
     </div>
 </div>
 
 </body>
-
 </html>
