--- a/gamesite/templates/user_response.html
+++ b/gamesite/templates/user_response.html
@@ -37,8 +37,7 @@
         <td><p align="center">{{ response.user_response.first_name }} {{ response.user_response.last_name }}</p></td>
         <td><p align="center">{{ response.content }}</p></td>
         <td><p align="center">{{ response.datetime | date:"d M Y" }}</p></td>
-        <td><a href="{% url 'accept' response.id %}"><u>принять</u></a> / <a href="{% url 'remove' response.id %}"><u>отклонить</u></a>
-        </td>
+        <td><p align="center"><a href="{% url 'accept' response.id %}"><u>принять</u></a> / <a href="{% url 'remove' response.id %}"><u>отклонить</u></a></p></td>
     </tr>
     {% endfor %}
 </table><br>
