--- a/gamesite/templates/static/default.html
+++ b/gamesite/templates/static/default.html
@@ -50,7 +50,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12 text-center">
-            {% block content %} {{ flatpage.content }} {% endblock content %}
+            {% block content %} {% endblock content %}
         </div>
     </div>
 </div>
