--- a/gamesite/templates/static/base.html
+++ b/gamesite/templates/static/base.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title> Simple SignUp/SignIn app</title>
+        <title>Вход в систему / Регистрация пользователя</title>
     </head>
     <body>
         <div>
-            <h1><a href="{% url 'login' %}">Simple SignUp/SignIn app</a></h1>
+            <h2><a href="{% url 'login' %}">Вход в систему / Регистрация пользователя</a></h2>
         </div>
         {% block content %}
         {% endblock %}
