--- a/gamesite/templates/static/default.html
+++ b/gamesite/templates/static/default.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -37,10 +35,8 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'search' %}">Поиск</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'response' %}">Отклики</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">Профиль</a></li>
-                <li class="nav-item">
-                    <a class="nav-link" href="http://127.0.0.1:8000/admin">АдминПанель ({{request.user.username}})</a>
-                </li>
-
+                <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8000/admin">АдминПанель
+                    ({{request.user.username}})</a></li>
             </ul>
         </div>
     </div>
