--- a/gamesite/templates/account/base.html
+++ b/gamesite/templates/account/base.html
@@ -1,8 +1,7 @@
-from django.contrib import admin
 
 <html>
     <head>
-        <title>{% block head_title %}{% endblock head_title %}</title>
+        <title>{% block head_title %}Вход через почту{% endblock head_title %}</title>
     </head>
     <body>
         {% block body %}
@@ -13,3 +12,6 @@ from django.contrib import admin
         {% endblock extra_body %}
     </body>
 </html>
+
+
+<!--from django.contrib import admin-->
