--- a/gamesite/templates/logout.html
+++ b/gamesite/templates/logout.html
@@ -1,5 +1,11 @@
 {% extends "static/base_sign.html" %}
 
+{% block title %} Вы вышли из системы {% endblock title %}
+
+
 {% block content %}
-<h2> Вы вышли из системы </h2>
+
+<br><h2> Вы вышли из системы </h2>
+
+
 {% endblock %}
