--- a/gamesite/templates/static/default.html
+++ b/gamesite/templates/static/default.html
@@ -29,14 +29,21 @@
             <ul class="navbar-nav ml-auto">
 
                 <!-- кнопки - ссылки на страницы -->
-                <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Войти</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Выйти</a></li>
+
                 <li class="nav-item"><a class="nav-link" href="{% url 'create' %}">Создать</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'search' %}">Поиск</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'response' %}">Отклики</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">Профиль</a></li>
-                <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8000/admin">АдминПанель
-                    ({{request.user.username}})</a></li>
+                <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8000/admin">Админка
+                    {% if request.user.username %} ({{request.user.username}}) {% endif %}</a></li>
+                {% if not request.user.username %}
+                <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8000/accounts/login/">Войти</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Войти</a></li>-->
+                {% endif %}
+                {% if request.user.username %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Выйти</a></li>
+                {% endif %}
+
             </ul>
         </div>
     </div>
