--- a/gamesite/templates/logout.html
+++ b/gamesite/templates/logout.html
@@ -7,5 +7,6 @@
 
 <br><h2> Вы вышли из системы </h2>
 
+<h5><a class="nav-link" href="http://127.0.0.1:8000/accounts/login/">Войти</a></h5>
 
 {% endblock %}
