.подтверждение по почте заработало, не понятно почему с первого раза не работало, прошло 10 минут, и заработало

--- a/gamesite/templates/user_profile.html
+++ b/gamesite/templates/user_profile.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<br><h3>Редактировать данные профиля</h3><br><br>
+<br><h3>Редактировать профиль</h3><br><br>
 
 <form align="center" method="POST">
     {% csrf_token %}
