--- a/gamesite/templates/static/base_sign.html
+++ b/gamesite/templates/static/base_sign.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <div>
-<!--            <h2><a href="{% url 'login' %}">Вход в систему / Регистрация пользователя</a></h2>-->
             <h2><a href="http://127.0.0.1:8000/accounts/login/">Вход в систему / Регистрация пользователя</a></h2>
         </div>
-        {% block content %}
-        {% endblock %}
+        {% block content %} {% endblock %}
     </body>
 </html>
+
+<!--            <h2><a href="{% url 'login' %}">Вход в систему / Регистрация пользователя</a></h2>-->
